--- a/.config/hypr/hyprland.conf.save.1
+++ b/.config/hypr/hyprland.conf.save.1
@@ -404,7 +404,7 @@ exec-once=$torrent
 exec-once=swayidle -w \\
                   timeout 300 '~/.config/hypr/scripts/swayIdleLocker &' \\
                   timeout 420 'hyprctl dispatch dpms off' \\
-			   resume 'hyprctl dispatch dpms on' \\ 
-                  before-sleep '~/.config/hypr/scripts/swayLocker &'
+			   resume 'hyprctl dispatch dpms on' \\
+                  before-sleep '~/.config/hypr/scripts/swayLocker &'"
 # unused
 #exec-once="kanshi -c $HOME/.config/hypr/kanshi/config"
